# ZTWorker

./: .gitignore  AGENTS.md  README.md  pyproject.toml
config/: worker.example.yaml
deploy/: bootstrap-worker.sh  update-agent.sh  zt-sync-results.service  zt-sync-results.sh  zt-sync-results.timer  zt-update-agent.service  zt-update-agent.timer  zt-worker.service
tests/: test_config_loading.py  test_container_naming.py  test_docker_run_config.py  test_employee_selection.py  test_volume_paths.py
worker_cli/: config.py  docker_manager.py  employees.py  filesystem.py  main.py  status.py  supervisor.py
